♻️ Simplify Stream code