@@ -8,7 +8,6 @@ import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.validation.constraints.NotEmpty;
 import javax.validation.constraints.NotNull;
 
@@ -112,9 +111,6 @@ public class OfficeVisitForm implements Serializable {
         setId(ov.getId().toString());
         setPreScheduled(((Boolean) (ov.getAppointment() != null)).toString());
         setDiagnoses(new ArrayList<>());
-        setPrescriptions(
-                ov.getPrescriptions().stream()
-                        .map(PrescriptionForm::new)
-                        .collect(Collectors.toList()));
+        setPrescriptions(ov.getPrescriptions().stream().map(PrescriptionForm::new).toList());
     }
 }
